--- a/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
+++ b/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Repository\AppUserManagement\AppUserRepository.cs" />
     <Compile Include="Repository\CategoryManagement\CategoryRepository.cs" />
     <Compile Include="Repository\CityCountyManagement\CityCountyRepository.cs" />
+    <Compile Include="Repository\DiscountKeyManagement\DiscountKeyRepository.cs" />
     <Compile Include="Repository\ParameterManagement\ParameterRepository.cs" />
     <Compile Include="Repository\ParameterTypeManagement\ParameterTypeList.cs" />
     <Compile Include="Repository\ParameterTypeManagement\ParameterTypeRepository.cs" />
