Ürün CRUD İşlemi Yapıldı

--- a/ECommerce/ECommerce.DATA/App.Config
+++ b/ECommerce/ECommerce.DATA/App.Config
@@ -16,5 +16,6 @@
   </entityFramework>
 <!--<connectionStrings><add name="ECommerceEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=194.169.120.27;initial catalog=ECommerce;user id=ecommerce;password=FF2020!!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>-->
 
-<connectionStrings><add name="ECommerceEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=194.169.120.27;initial catalog=ECommerce;persist security info=True;user id=ecommerce;password=FF2020!!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-</configuration>
+ 
+
+<connectionStrings><add name="ECommerceEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=194.169.120.27;initial catalog=ECommerce;user id=ecommerce;password=FF2020!!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
