--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1547,6 +1547,7 @@
     <Compile Include="Controllers\AppUserManagement\AppUserController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductManagament\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1557,6 +1558,7 @@
     <Compile Include="Models\AppUserManagement\AppUserUpdateView.cs" />
     <Compile Include="Models\AppUserManagement\LoggedUser.cs" />
     <Compile Include="Models\CityCountyManagament\CityCountyListView.cs" />
+    <Compile Include="Models\ProductManagament\ProductStoreWindowModel.cs" />
     <Compile Include="Models\SliderManagement\SliderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Attribute\LoggedAdminAttribute.cs" />
@@ -1677,6 +1679,8 @@
     <Content Include="Views\AppUser\_MenuInfo.cshtml" />
     <Content Include="Views\Home\Password.cshtml" />
     <Content Include="Views\Home\RePassword.cshtml" />
+    <Content Include="Views\Product\IndexProductStoreWindow.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
