--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1548,6 +1548,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductManagament\ProductController.cs" />
+    <Compile Include="Controllers\UserCartManagement\UserCartController.cs" />
     <Compile Include="Controllers\WishlistManagement\WishlistController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -1561,6 +1562,7 @@
     <Compile Include="Models\CityCountyManagament\CityCountyListView.cs" />
     <Compile Include="Models\ProductManagament\ProductStoreWindowModel.cs" />
     <Compile Include="Models\SliderManagement\SliderViewModel.cs" />
+    <Compile Include="Models\UserCartManagamenet\UserCartModel.cs" />
     <Compile Include="Models\WishlistManagement\AppUserWishlistModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Attribute\LoggedAdminAttribute.cs" />
@@ -1685,6 +1687,8 @@
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Wishlist\Index.cshtml" />
     <Content Include="Views\Wishlist\_WishList.cshtml" />
+    <Content Include="Views\UserCart\Index.cshtml" />
+    <Content Include="Views\UserCart\_UserCart.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
