--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1539,6 +1539,7 @@
     <Compile Include="Areas\Admin\Model\ParameterManagement\ParameterListView.cs" />
     <Compile Include="Areas\Admin\Model\ProductManagement\ProductCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ProductManagement\ProductListView.cs" />
+    <Compile Include="Areas\Admin\Model\ProductManagement\ProductStoreWindowCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperCRUDModel.cs" />
     <Compile Include="Areas\Admin\Model\ShippersManagement\ShipperListView.cs" />
     <Compile Include="Areas\Admin\Model\SliderManagement\SliderCRUDModel.cs" />
@@ -1559,6 +1560,7 @@
     <Compile Include="Models\AppUserManagement\AppUserPasswordModel.cs" />
     <Compile Include="Models\AppUserManagement\AppUserUpdateView.cs" />
     <Compile Include="Models\AppUserManagement\LoggedUser.cs" />
+    <Compile Include="Models\AppUserManagement\UserInformationModel.cs" />
     <Compile Include="Models\CityCountyManagament\CityCountyListView.cs" />
     <Compile Include="Models\ProductManagament\ProductStoreWindowModel.cs" />
     <Compile Include="Models\SliderManagement\SliderViewModel.cs" />
@@ -1662,6 +1664,8 @@
     <Content Include="Areas\Admin\Views\Product\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminUser\RePassword.cshtml" />
     <Content Include="Areas\Admin\Views\AdminUser\Password.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\InsertProductStoreWindow.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\ProductStoreWindowList.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
