--- a/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
+++ b/ECommerce/ECommerce.WEB/ECommerce.WEB.csproj
@@ -1560,6 +1560,7 @@
     <Compile Include="Models\AppUserManagement\AppUserUpdateView.cs" />
     <Compile Include="Models\AppUserManagement\LoggedUser.cs" />
     <Compile Include="Models\CityCountyManagament\CityCountyListView.cs" />
+    <Compile Include="Models\ProductManagament\ProductDetailViewModel.cs" />
     <Compile Include="Models\ProductManagament\ProductStoreWindowModel.cs" />
     <Compile Include="Models\SliderManagement\SliderViewModel.cs" />
     <Compile Include="Models\UserCartManagamenet\UserCartModel.cs" />
@@ -1689,6 +1690,7 @@
     <Content Include="Views\Wishlist\_WishList.cshtml" />
     <Content Include="Views\UserCart\Index.cshtml" />
     <Content Include="Views\UserCart\_UserCart.cshtml" />
+    <Content Include="Views\Product\Detail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
