--- a/ECommerce/ECommerce.WEB/Web.config
+++ b/ECommerce/ECommerce.WEB/Web.config
@@ -31,6 +31,8 @@
     <add key="ActivationExpiredAddDay" value="30"/>
     <add key="ErrorPostMail" value="test@gunce.com"/>
     <add key="ApprovalProcessSettingVisible" value="true"/>
+   <add key="DecimalCulture" value="tr-TR" />
+
   </appSettings>
  
   
