Ürün insert / update decimal sorunu çözüldü.

--- a/ECommerce/ECommerce.WEB/Web.config
+++ b/ECommerce/ECommerce.WEB/Web.config
@@ -40,6 +40,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+    <globalization culture="tr-TR" uiCulture="tr-TR" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
