Sipariş işlemlerine başlandı.

--- a/ECommerce/ECommerce.DATA/ECommerce.DATA.csproj
+++ b/ECommerce/ECommerce.DATA/ECommerce.DATA.csproj
@@ -95,6 +95,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Order.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrderDetail.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Parameter.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
