--- a/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
+++ b/ECommerce/ECommerce.BIZ/ECommerce.BIZ.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Repository\CategoryManagement\CategoryRepository.cs" />
     <Compile Include="Repository\CityCountyManagement\CityCountyRepository.cs" />
     <Compile Include="Repository\DiscountKeyManagement\DiscountKeyRepository.cs" />
+    <Compile Include="Repository\OrderManagement\OrderRepository.cs" />
     <Compile Include="Repository\ParameterManagement\ParameterRepository.cs" />
     <Compile Include="Repository\ParameterTypeManagement\ParameterTypeList.cs" />
     <Compile Include="Repository\ParameterTypeManagement\ParameterTypeRepository.cs" />
