--- a/ECommerce/ECommerce.DATA/ECommerce.DATA.csproj
+++ b/ECommerce/ECommerce.DATA/ECommerce.DATA.csproj
@@ -80,6 +80,9 @@
     <Compile Include="DiscountKey.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="GetRecursiveChildCategory_Result.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
